add auth top swagger and response type
